--- a/happy-web/index.html
+++ b/happy-web/index.html
@@ -6,7 +6,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Web</title>
+
     <link rel="icon" href="./public/images/logo-icon.png">
+
+    <link rel="stylesheet" href="./public/css/main.css">
   </head>
 
   <body>
