Criando divisões no código

--- a/happy-web/index.html
+++ b/happy-web/index.html
@@ -13,25 +13,29 @@
   </head>
 
   <body>
-    <header>
-      <img src="./public/images/logo.svg" alt="Logo da Happy">
+    <div id="page-landing">
+      <div id="container">
+        <header>
+          <img src="./public/images/logo.svg" alt="Logo da Happy">
 
-      <div>
-        <strong>Gama</strong>
-        <p>Distrito Federal</p>
+          <div>
+            <strong>Gama</strong>
+            <p>Distrito Federal</p>
+          </div>
+        </header>
+
+        <main>
+          <h1>Leve felicidade para o mundo</h1>
+
+          <section>
+            <p>Visite orfanatos e mude o dia de muitas crianças.</p>
+            <a href="#">
+              <img src="./public/images/arrow.svg" alt="Ir para o mapa">
+            </a>
+          </section>
+        </main>
       </div>
-    </header>
-
-    <main>
-      <h1>Leve felicidade para o mundo</h1>
-
-      <section>
-        <p>Visite orfanatos e mude o dia de muitas crianças.</p>
-        <a href="#">
-          <img src="./public/images/arrow.svg" alt="Ir para o mapa">
-        </a>
-      </section>
-    </main>
+    </div>
   </body>
 
 </html>
