--- a/happy-web/index.html
+++ b/happy-web/index.html
@@ -10,6 +10,8 @@
     <link rel="icon" href="./public/images/logo-icon.png">
 
     <link rel="stylesheet" href="./public/css/main.css">
+
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&display=swap" rel="stylesheet">
   </head>
 
   <body>
