--- a/happy-web/index.html
+++ b/happy-web/index.html
@@ -21,8 +21,8 @@
           <img src="./public/images/logo.svg" alt="Logo da Happy">
 
           <div>
-            <strong>Gama</strong>
-            <p>Distrito Federal</p>
+            <strong>Rio do Sul</strong>
+            <p>Santa Catarina</p>
           </div>
         </header>
 
