--- a/happy-web/index.html
+++ b/happy-web/index.html
@@ -18,9 +18,9 @@
     <div id="page-landing">
       <div id="container">
         <header>
-          <img src="./public/images/logo.svg" alt="Logo da Happy">
+          <img id="logo" src="./public/images/logo.svg" alt="Logo da Happy">
 
-          <div>
+          <div class="location">
             <strong>Rio do Sul</strong>
             <p>Santa Catarina</p>
           </div>
@@ -29,8 +29,9 @@
         <main>
           <h1>Leve felicidade para o mundo</h1>
 
-          <section>
+          <section class="visit">
             <p>Visite orfanatos e mude o dia de muitas crianças.</p>
+
             <a href="#">
               <img src="./public/images/arrow.svg" alt="Ir para o mapa">
             </a>
