--- a/happy-web/index.html
+++ b/happy-web/index.html
@@ -18,21 +18,25 @@
     <div id="page-landing">
       <div id="container">
         <header>
-          <img id="logo" src="./public/images/logo.svg" alt="Logo da Happy">
+          <img 
+            class="animate-up"
+            id="logo" 
+            src="./public/images/logo.svg" 
+            alt="Logo da Happy">
 
-          <div class="location">
+          <div class="location animate-up">
             <strong>Rio do Sul</strong>
             <p>Santa Catarina</p>
           </div>
         </header>
 
         <main>
-          <h1>Leve felicidade para o mundo</h1>
+          <h1 class="animate-up">Leve felicidade para o mundo</h1>
 
           <section class="visit">
-            <p>Visite orfanatos e mude o dia de muitas crianças.</p>
+            <p class="animate-up">Visite orfanatos e mude o dia de muitas crianças.</p>
 
-            <a href="#">
+            <a href="#" class="animate-up">
               <img src="./public/images/arrow.svg" alt="Ir para o mapa">
             </a>
           </section>
