--- a/happy-web/orphanages.html
+++ b/happy-web/orphanages.html
@@ -47,6 +47,8 @@
         <img src="./public/images/plus.svg" alt="Criar orfanato">
       </a>
     </div>
+
+    <script src="./public/scripts/page-orphanages.js"></script>
   </body>
 
 </html>
