--- a/happy-web/index.html
+++ b/happy-web/index.html
@@ -27,8 +27,8 @@
             alt="Logo da Happy">
 
           <div class="location animate-up">
-            <strong>Rio do Sul</strong>
-            <p>Santa Catarina</p>
+            <strong>Gama</strong>
+            <p>Distrito Federal</p>
           </div>
         </header>
 
