--- a/happy-web/orphanages.html
+++ b/happy-web/orphanages.html
@@ -36,8 +36,8 @@
         </header>
 
         <footer>
-          <strong>Rio do Sul</strong>
-          <p>Santa Catarina</p>
+          <strong>Gama</strong>
+          <p>Distrito Federal</p>
         </footer>
       </aside>
 
