Inserindo nova classe

--- a/happy-web/orphanages.html
+++ b/happy-web/orphanages.html
@@ -41,7 +41,7 @@
         </footer>
       </aside>
 
-      <div id="mapid"></div>
+      <div id="mapid" class="animate-appear"></div>
 
       <a href="create-orphanage.html" class="create-orphanage" title="Cadastre um orfanato">
         <img src="./public/images/plus.svg" alt="Criar orfanato">
