Alterando Cidade/Estado e inserindo o destino da página de orfanatos

--- a/happy-web/index.html
+++ b/happy-web/index.html
@@ -27,8 +27,8 @@
             alt="Logo da Happy">
 
           <div class="location animate-up">
-            <strong>Gama</strong>
-            <p>Distrito Federal</p>
+            <strong>Rio do Sul</strong>
+            <p>Santa Catarina</p>
           </div>
         </header>
 
@@ -38,7 +38,7 @@
           <section class="visit">
             <p class="animate-up">Visite orfanatos e mude o dia de muitas crianças.</p>
 
-            <a href="#" class="animate-up">
+            <a href="orphanages.html" class="animate-up">
               <img src="./public/images/arrow.svg" alt="Ir para o mapa">
             </a>
           </section>
